--- a/activity03-r-intro.Rmd
+++ b/activity03-r-intro.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Activity 3"
-author: "Team Name"
+author: "Team 1"
 output: github_document
 ---
 
@@ -31,59 +31,66 @@ Create three vectors that contain: 1) the lower case letters, 2) the lower case 
 ```{r}
 lower_case <- c("a", "b", "c", "d", "e", "f", "g", "h", "i", "j", "k", "l", "m", "n", "o", "p", "q", "r", "s", "t", "u", "v", "w", "x", "y", "z")
 
-upper_case <- c("A", "B", "C", "D", "E", "F", "G", "H" "I", "J", "K", "L", "M", "N", "O", "P", "Q", "R", "S", "T", "U", "V", "W", "X", "Y", "Z")
+upper_case <- c("A", "B", "C", "D", "E", "F", "G", "H", "I", "J", "K", "L", "M", "N", "O", "P", "Q", "R", "S", "T", "U", "V", "W", "X", "Y", "Z")
 
-punctuation <- c(".", ",", "!", "?", "'", """, "(", ")", " ", "-", ";", ":")
+punctuation <- c(".", ",", "!", "?", "'", "\"", "(", ")", " ", "-", ";", ":")
 ```
 
 Comment on what you noticed about the errors and how you used this information to correct the issues.
 
 **Response**:
+
+1. error on unexpected string constant in upper_case:there was a missing comma between H and I
+
+2. Error: unexpected string constant in "punctuation - there are three quotation marks """ and i need to escape one special character because R is trying to pair up quotations.
 
 
 Make one long vector containing all the symbols.
 
 ```{r}
-my_symbols <- cbind(lower_case, upper_case, punctuation)
+my_symbols <- c(lower_case, upper_case, punctuation)
 ```
 
 Comment on what you noticed about the errors and how you used this information to correct the issues.
 
-**Response**:
+**Response**:the code was making use of cbind instead of c which is what is used in R to produce a vector.Cbind produces a matrix and that's not what we want.
 
 
 Turn the `my_symbols` vector into a data frame, with the variable name "Symbol".
 
 ```{r}
-my_symbols <- dataframe(my_symbols)
-names(my_symbols) = Symbol
+my_symbols <- data.frame(my_symbols)
+names(my_symbols) <- "Symbol" 
 ```
 
 Comment on what you noticed about the errors and how you used this information to correct the issues.
 
 **Response**:
+1. R could not find the data frame function because it didn't have a dot between data and frame.
+
+2. Error stating that R could not find the variable symbol and so i put quotation marks around symbol and used the variable assignment symbol <-
 
 
 Find the total number of symbols we have in our data frame.  
 
 ```{r}
-len <- length(my_symbols)
+len <- nrow(my_symbols)
 ```
 
 Comment on what you noticed about the errors and how you used this information to correct the issues.
 
-**Response**:
+**Response**:the code runs but it doesn't give the answer that we want.we need to use nrow instead of length because its a data frame and not a vector.
 
 
 5. Create a new variable in your dataframe that assigns a number to each symbol.
 
 ```{r}
-my_symbols%Num <- 1:len
+my_symbols$Num <- 1:len
 ```
 
 Comment on what you noticed about the errors and how you used this information to correct the issues.
 
-**Response**:
+**Response**:The code included a % sign that was causing an error cause a $ sign should be used instead.
 
 
 
@@ -113,7 +120,10 @@ Write your own code to complete the steps below.
 4. Square every number.
 
 ```{r}
-
+top_secret <- top_secret + 14
+top_secret <- top_secret * 18 - 257
+top_secret <- exp(top_secret)
+top_secret <- top_secret ^ 2
 ```
 
 **HQ UPDATE:** Headquarters has informed you that at this stage of decoding, there should be 496 numbers in the secret message that are below 17.
@@ -126,7 +136,15 @@ Write your own code to complete the steps below.
 10. Turn your matrix back into a vector.
 
 ```{r}
+# HQ check
+sum(top_secret < 17)
 
+top_secret <- matrix(top_secret, ncol = 5)
+evens <- seq(from = 2, to = 502, by = 2)
+top_secret[,1] <- top_secret[,1] - evens
+top_secret[18:24,3] <- top_secret[18:24,3] - 100
+top_secret[,4:5] <- top_secret[,4:5] * 2
+top_secret <- c(top_secret)
 ```
 
 **HQ UPDATE:** Headquarters has informed you that at this stage of decoding, all numbers in indices 500 and beyond are below 100.
@@ -136,7 +154,12 @@ Write your own code to complete the steps below.
 13. Replace all instances of the number 39 with 20.
 
 ```{r}
+#HQ update
+sum(top_secret[500:length(top_secret)] < 100)
 
+top_secret[38:465] <- sqrt(top_secret[38:465])
+top_secret <- round(top_secret)
+top_secret[top_secret == 39] <- 20
 ```
 
 **HQ UPDATE:** Headquarters has informed you that your final message should have 421 even numbers.
@@ -148,16 +171,19 @@ Write your own code to complete the steps below.
 Use your final vector of numbers as indices for `my_symbols` to discover the final message, by running the following code:
 
 ```{r}
+#HQ check
+sum((top_secret %% 2) == 0 )
+
 stringr::str_c(my_symbols$Symbol[top_secret], collapse = "")
 ```
 
 Google the first line of this message, if you do not recognize it, to see what it is.
 
-**delete this line and comment on what on the activity as a whole**
+
 
 Comment on what you noticed about the activity as a whole.
 
-**Response**:
+**Response**:one has to careful to follow the laid down R syntax and call the correct functions in order to achieve the desired result.
 
 
 
